--- a/day 33/class work/lesson33.html
+++ b/day 33/class work/lesson33.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <video controls width="50%">
+    <video controls width="50%" aria-controls="">
         <source src="./asmr.mp4" type="video/mp4">
     </video>>
 </body>
