--- a/day 33/home work/index.html
+++ b/day 33/home work/index.html
@@ -8,11 +8,11 @@
     <title>Document</title>
 </head>
 <body>
-    <video conrtol width="50%"> 
+    <video width="600" controls> 
         <source src="./CAR.mp4" type="video/mp4">
     </video>
 
-    <audio controls width="50%">
+    <audio controls>
         <source src="./BMW.mp4" type="audio/mp4">
     </audio>
 </body>
