--- a/day 33/class work/lesson33.html
+++ b/day 33/class work/lesson33.html
@@ -8,6 +8,6 @@
 <body>
     <video controls width="50%" aria-controls="">
         <source src="./asmr.mp4" type="video/mp4">
-    </video>>
+    </video>
 </body>
 </html>
