--- a/day 35/home ork/leon35.html
+++ b/day 35/home ork/leon35.html
@@ -34,6 +34,7 @@
                 <img src="./Goa.jpg">
                 <img src="Goa photo2.jpg">
                 <img src="./chad goa.jpg">
+                <img src="" alt="">
             </section>
             <section>
                 <h2>მნიშვნელოვანი ინფორმაცია</h2>
